fixed values algorithm. investigating screen top issue on ios devices

--- a/src/styles/sass/header2.scss
+++ b/src/styles/sass/header2.scss
@@ -5,7 +5,7 @@
   #header2{
       @include box(flex, column, auto, auto);  
       width:100vw;
-      position:fixed;
+      position:relative;
       transition: background-color .5s, height .5s;
       z-index:20;
       overflow:hidden;
